# vk-spaceships

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/shaders/: compile.sh  f_tex.sc  v_simple.sc  v_tex.sc  varying.def.sc
src/: game.cpp  game.h  input.cpp  input.h  main.cpp  renderer.cpp  renderer.h  resources.cpp  resources.h  sprite.cpp  sprite.h  window.cpp  window.h
src/components/: material.h  mesh2d.h  movement.h  transform.h
src/systems/: sprite_renderer.cpp  sprite_renderer.h
